# libtv-cli

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh
.github/workflows/: build.yml
skill/: SKILL.md  generate_image.bat  generate_image.sh
src/: client.rs  download.rs  generate.rs  main.rs  models.rs
