[package]
name = "libtv-cli"
version = "0.1.0"
edition = "2021"
authors = ["libtv-cli"]
description = "CLI tool for LiblibAI (liblib.art) text-to-image generation"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
anyhow = "1.0"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
strip = true
